<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:local="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/violet"
        android:id="@+id/user_profile_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarColoredBackArrow">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/postad"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/photo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/post_ad_images_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image0"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="4dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="4dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="4dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="4dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="4dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />

                </LinearLayout>

            </HorizontalScrollView>

            <Button
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/bubble"
                android:id="@+id/post_ad_choose_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Images" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/choose_location"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    style="@style/dropdownmenutheme"
                    android:layout_marginBottom="8dp"
                    android:textStyle="italic"
                    android:background="@drawable/stroke_rect"
                    android:drawablePadding="10dp"
                    android:completionThreshold="1"
                    android:id="@+id/choose_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/location"
                    android:gravity="center_vertical"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/click_to_choose" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/post_ad_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/black"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="80"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/post_ad_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/black"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="1000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/post_ad_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/black"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/vehicle_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:buttonTint="@color/violet"
                        android:textSize="12sp"
                        android:checked="true"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio1"
                        android:text="@string/two_wheeler"/>

                    <RadioButton
                        android:buttonTint="@color/violet"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio2"
                        android:text="@string/three_wheeler"/>

                    <RadioButton
                        android:buttonTint="@color/violet"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio3"
                        android:text="@string/four_wheeler"/>

                </RadioGroup>
            </LinearLayout>

            <Button
                android:textColor="@color/white"
                android:background="@drawable/bubble"
                android:id="@+id/post_ad_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/postad" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>