<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@drawable/rounded_rect2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/ad_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_image" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/rect_round_corner"/>
            </RelativeLayout>


            <LinearLayout
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/ad_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/price" />

                <TextView
                    android:id="@+id/ad_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/ad_vehicle_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    tools:text="@string/vehicle_type" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/location_drawable_left"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:layout_toRightOf="@id/location_drawable_left"
                        android:id="@+id/ad_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        tools:text="@string/location" />

                    <TextView
                        android:layout_alignParentRight="true"
                        android:id="@+id/ad_timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        tools:text="@string/timestamp" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>